Fix spacing issue for the about section

--- a/style.css
+++ b/style.css
@@ -630,6 +630,7 @@ html {
   .about-line {
     grid-column: 1 / 3;
     width: 90%;
+    margin-top: 3rem;
   }
 
   .about-overly {
